Fixes #365 - Edit UX for results map
In this branch, @millerEric made some UX changes to the results map
view in response to Issue #365 ("Google Map rollover is cropped out of
view some times."). @millerEric used infoBox.js from the Google
Maps utility library, because it allows for easy customizability,
including position and styling. Presently, the infoBox is displayed to
the right of markers to decrease the likelihood of it being cropped out
of the window. The infoBox can be styled either within its options
object, or by linking to a CSS stylesheet. @anselmbradford moved all
styles to CSS.

- @millerEric set the marker's optimized property to false in order to
prevent events from propagating through the infoBox onto the map (e.g.
to prevent markers underneath an open infoBox from registering a
mouseover event).

- @anselmbradford added a z-index for the close box [x] per
@millerEric original edit, because it was visible but not clickable.

- infoBox.js requires the google maps api to be fully loaded before
it is loaded. This has presented some difficulties because of the
asynchronous loading of the google maps api. @anselmbradford nested the
dependencies so they loaded in order, which consequentially required
the result-map-manager to become self-executing, for better or worse.

@anselmbradford's commit also edits the following:

- Removes the clearMarkers method, which is only needed if the map results
were updated via ajax (which isn’t currently used).

- Removes the metadata and summary text variables, which were no longer
used.

- Adds additional code comments to the map manager code.

- Configures infobox states using a bit mask so that complex interactions
can be programmed as toggleable flags that are then evaluated for to determine
when to open or close the infobox.

- Configures jshint task to allow bitwise operations that are needed for
a bitmask.

- Adds additional styles to the infobox to make it more consistent with
links and other such styling in ot

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -1794,6 +1794,94 @@ body { top: 0px !important; }
 {
   height: 150px;
   border-bottom: 1px solid midtone($blue);
+
+  .infoBox
+  {
+    background-color: $white;
+    @include border-radius(0px 4px 4px 4px);
+    @include single-box-shadow(midtone($black,0.4), 0px, 0px, 5px);
+    border: 1px solid dark($blue);
+    padding: 3px 6px;
+    opacity: 0.95;
+
+    h1
+    {
+      font-weight: bold;
+      font-size: $font_size_95;
+      margin-right: 20px;
+    }
+
+    h2
+    {
+      font-size: $font_size_95;
+    }
+
+    a
+    {
+      color: $greyscale_midtone; // IE fallback
+      color: rgba($black, .6);
+      cursor: pointer;
+      border-bottom: 1px solid $white;
+      @include inline-block();
+    }
+    a:hover
+    {
+      color: dark($blue);
+      border-bottom: 1px solid $greyscale_midtone;
+      border-bottom: 1px solid rgba($black, .4);
+      text-decoration: none;
+    }
+
+    p
+    {
+      text-align: center;
+      margin-top: 4px;
+      border-top: 1px solid midtone($blue,0.5);
+      font-size: $font_size_90;
+      margin-bottom: 2px;
+    }
+
+    .button-close
+    {
+      color: $greyscale_midtone; // IE Fallback
+      color: rgba($black, .5);
+      position: absolute;
+      right: 0px;
+      top: -10px;
+      font-size: $font_size_120;
+      font-family: $font_serif;
+    }
+
+    .button-close:after,
+    .button-close::after
+    {
+      content: "×";
+    }
+
+    .button-close:hover
+    {
+      color: $black;
+      cursor: pointer;
+    }
+
+    .corner
+    {
+      position: absolute;
+      left: -9px;
+      top: -3px;
+      width: 0;
+      height: 0;
+      border-left: 6px solid transparent;
+      border-right: 6px solid transparent;
+      border-bottom: 6px solid $greyscale_midtone;
+      @include rotate(-45deg);
+    }
+  }
+
+  .infoBox:hover a
+  {
+    color: dark($blue);
+  }
 }
 #map-canvas.max
 {
